--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ name: Migración Software Libre UN
 description: Go Free UN
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/mleonardomp/mleonardomp.github.io/master/images/U.N.png
 
 #
 # Flags below are optional
