--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 #
 
 # Name of your site (displayed in the header)
-name: Migración Software Libre UN
+name: Migración Software Libre 
 # Short bio or description (displayed in the header)
-description: Go Free UN
+description: Go Free 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/mleonardomp/mleonardomp.github.io/master/images/U.N.png
